# claude-qte

./: .gitignore  README.md  claude_qte.py  claude_qte.spec  install.sh  pyproject.toml
.github/workflows/: build.yml
src/claude_qte/: __init__.py  __main__.py  _platform.py  _runtime.py  _sound.py  cli.py  denial_log.py  hook.py  installer.py  popup.py  server.py  settings.py  tui.py  wrapper.py
tests/: conftest.py  test_cli.py  test_denial_log.py  test_hook.py  test_installer.py  test_platform.py  test_popup.py  test_runtime.py  test_server.py  test_settings.py  test_sound.py  test_tui.py  test_wrapper.py
