[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-qte"
description = "Quick-Time Event approval gate for Claude Code."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]
authors = [{ name = "Adilet Baimyrza" }]
keywords = ["claude", "claude-code", "approval", "permission-gate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[project.scripts]
claude-qte = "claude_qte.cli:main"

[project.urls]
Homepage = "https://github.com/adiletbaimyrza/claude-qte"
Issues = "https://github.com/adiletbaimyrza/claude-qte/issues"

[tool.setuptools.dynamic]
version = { attr = "claude_qte.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = ["build", "dist", ".venv"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line-too-long — formatter already softens this
    "SIM108", # if/else → ternary isn't always more readable
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # `assert False` is fine in tests
"src/claude_qte/tui.py" = ["RUF001"]  # intentional Unicode for the Claude Code-style UI

[tool.ruff.format]
quote-style = "double"
